Update page interface

--- a/CustomScrollableMenuApp/PresentationLayer/PageInterface/PageInterface.storyboard
+++ b/CustomScrollableMenuApp/PresentationLayer/PageInterface/PageInterface.storyboard
@@ -16,9 +16,25 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some awersome page" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ni2-Y4-ve2">
+                                <rect key="frame" x="10" y="427.5" width="394" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="34"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="ni2-Y4-ve2" secondAttribute="trailing" constant="10" id="1pO-pz-Yr0"/>
+                            <constraint firstItem="ni2-Y4-ve2" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="10" id="3Mm-r4-idc"/>
+                            <constraint firstItem="ni2-Y4-ve2" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="aOD-gR-84H"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="titleLabel" destination="ni2-Y4-ve2" id="akv-vq-kgs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
